# ai-quant-trader

./: .gitignore  dataset_builder.py  download_sp500_data.py
.github/workflows/: autoresearch_cron.yml
autoresearch/: prepare.py  program.md  pyproject.toml  run_autoresearch.py  train.py
autoresearch/data/: spy_benchmark.parquet  val_meta.parquet  y_train.pt  y_val.pt
